--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /*!
-Theme Name: UCHCBronx
+Theme Name: monkeytail
 Theme URI: http://www.monkeykodeagency.com/
 Author: Monkey Kode
 Author URI: https://www.monkeykodeagency.com
-Description: Custom Theme for UCHCBRONX
+Description: Custom Theme for monkeytail
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
-Text Domain: uchcbronx
+Text Domain: monkeytail
 Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
 
 This theme, like WordPress, is licensed under the GPL.
