--- a/resources/views/header.twig
+++ b/resources/views/header.twig
@@ -5,7 +5,7 @@
 
 <body {{body_class}}>
         <div id="page" class="site">
-            <a class="skip-link screen-reader-text" href="#content"><?php esc_html_e( 'Skip to content', 'uchcbronx' ); ?></a>
+            <a class="skip-link screen-reader-text" href="#content"><?php esc_html_e( 'Skip to content', 'monkeytail' ); ?></a>
 
             <header id="masthead" class="site-header">
                 <div class="site-branding">
@@ -24,16 +24,16 @@
                     </p>
                     <?php
             endif;
-            $uchcbronx_description = get_bloginfo( 'description', 'display' );
-            if ( $uchcbronx_description || is_customize_preview() ) :
+            $monkeytail_description = get_bloginfo( 'description', 'display' );
+            if ( $monkeytail_description || is_customize_preview() ) :
                 ?>
-                    <p class="site-description"><?php echo $uchcbronx_description; /* WPCS: xss ok. */ ?></p>
+                    <p class="site-description"><?php echo $monkeytail_description; /* WPCS: xss ok. */ ?></p>
                     <?php endif; ?>
                 </div>
                 <!-- .site-branding -->
 
                 <nav id="site-navigation" class="main-navigation">
-                    <button class="menu-toggle" aria-controls="primary-menu" aria-expanded="false"><?php esc_html_e( 'Primary Menu', 'uchcbronx' ); ?></button>
+                    <button class="menu-toggle" aria-controls="primary-menu" aria-expanded="false"><?php esc_html_e( 'Primary Menu', 'monkeytail' ); ?></button>
                     <?php
             wp_nav_menu(
                 array(
